src/gallery/scss/_gallery-carousel.scss
@import "../../utilities/variables";

.gm-frontend-gallery {
  &__carousel {
    position: fixed;
    top: 0;
    left: 0;
    background-color: rgba($themeColor1, .5);
    .v-window__prev,
    .v-window__next {
      button {
        &.theme--light.v-btn.v-btn--icon {
          color: $themeColor2;
        }
      }
    }
    &__close-button {
      color: $themeColor2;
      position: absolute;
      top: 1rem;
      right: 1rem;
      z-index: 1;
    }
  }
}

